sunvox_lib/headers/sunvox.h

/*
   Constants, data types and macros
*/

#define NOTECMD_NOTE_OFF	128
#define NOTECMD_ALL_NOTES_OFF	129 /* send "note off" to all modules */
#define NOTECMD_CLEAN_SYNTHS	130 /* put all modules into standby state (stop and clear all internal buffers) */
#define NOTECMD_STOP		131
#define NOTECMD_PLAY		132
typedef struct
{
    uint8_t	note;           /* NN: 0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_xxx defines */
    uint8_t	vel;            /* VV: Velocity 1..129; 0 - default */
    uint16_t	module;         /* MM: 0 - nothing; 1..65535 - module number + 1 */
    uint16_t	ctl;            /* 0xCCEE: CC: 1..127 - controller number + 1; EE - effect */
    uint16_t	ctl_val;        /* 0xXXYY: value of controller or effect */
} sunvox_note;
/* Flags for sv_init(): */
#define SV_INIT_FLAG_NO_DEBUG_OUTPUT 		( 1 << 0 )
#define SV_INIT_FLAG_USER_AUDIO_CALLBACK 	( 1 << 1 ) /* Offline mode: */
#define SV_INIT_FLAG_AUDIO_INT16 		( 1 << 2 ) /* Desired sample type of the output sound stream : int16_t */
#define SV_INIT_FLAG_AUDIO_FLOAT32 		( 1 << 3 ) /* Desired sample type of the output sound stream : float */
							   /* The actual sample type may be different, if SV_INIT_FLAG_USER_AUDIO_CALLBACK is not set */
#define SV_INIT_FLAG_ONE_THREAD			( 1 << 4 ) /* Audio callback and song modification are in single thread */
/* Flags for sv_get_module_flags(): */
#define SV_MODULE_FLAG_EXISTS 	( 1 << 0 )
#define SV_MODULE_FLAG_EFFECT 	( 1 << 1 )
#define SV_MODULE_FLAG_MUTE	( 1 << 2 )
#define SV_MODULE_FLAG_SOLO	( 1 << 3 )
#define SV_MODULE_FLAG_BYPASS	( 1 << 4 )
#define SV_MODULE_INPUTS_OFF 	16
#define SV_MODULE_INPUTS_MASK 	( 255 << SV_MODULE_INPUTS_OFF )
#define SV_MODULE_OUTPUTS_OFF 	( 16 + 8 )
#define SV_MODULE_OUTPUTS_MASK 	( 255 << SV_MODULE_OUTPUTS_OFF )
    #define LIBNAME "sunvox.dll"
    #define LIBNAME "sunvox.dylib"
    #define LIBNAME "./sunvox.so"
/*
   Functions
   (use the functions with the label "USE LOCK/UNLOCK" within the sv_lock_slot() / sv_unlock_slot() block only!)
*/

/*
   sv_init(), sv_deinit() - global sound system init/deinit
   Parameters:
     config - string with additional configuration in the following format: "option_name=value|option_name=value";
              example: "buffer=1024|audiodriver=alsa|audiodevice=hw:0,0";
              use null if you agree to the automatic configuration;
     freq - desired sample rate (Hz); min - 44100;
            the actual rate may be different, if SV_INIT_FLAG_USER_AUDIO_CALLBACK is not set;
     channels - only 2 supported now;
     flags - mix of the SV_INIT_FLAG_xxx flags.
*/
int sv_init( const char* config, int freq, int channels, uint32_t flags ) SUNVOX_FN_ATTR;
int sv_deinit( void ) SUNVOX_FN_ATTR;
/*
   sv_get_sample_rate() - get current sampling rate (it may differ from the frequency specified in sv_init())
*/
int sv_get_sample_rate( void ) SUNVOX_FN_ATTR;
/*
   sv_update_input() - 
   handle input ON/OFF requests to enable/disable input ports of the sound card
   (for example, after the Input module creation).
   Call it from the main thread only, where the SunVox sound stream is not locked.
*/
int sv_update_input( void ) SUNVOX_FN_ATTR;
/*
   sv_audio_callback() - get the next piece of SunVox audio from the Output module.
   With sv_audio_callback() you can ignore the built-in SunVox sound output mechanism and use some other sound system.
   SV_INIT_FLAG_USER_AUDIO_CALLBACK flag in sv_init() mus be set.
   Parameters:
     buf - destination buffer of type int16_t (if SV_INIT_FLAG_AUDIO_INT16 used in sv_init())
           or float (if SV_INIT_FLAG_AUDIO_FLOAT32 used in sv_init());
           stereo data will be interleaved in this buffer: LRLR... ; where the LR is the one frame (Left+Right channels);
     frames - number of frames in destination buffer;
     latency - audio latency (in frames);
     out_time - buffer output time (in system ticks, SunVox time space);
   Return values: 0 - silence (buffer filled with zeroes); 1 - some signal.
   Example 1 (simplified, without accurate time sync) - suitable for most cases:
     sv_audio_callback( buf, frames, 0, sv_get_ticks() );
   Example 2 (accurate time sync) - when you need to maintain exact time intervals between incoming events (notes, commands, etc.):
     user_out_time = ... ; //output time in user time space (depends on your own implementation)
     user_cur_time = ... ; //current time in user time space
     user_ticks_per_second = ... ; //ticks per second in user time space
     user_latency = user_out_time - user_cur_time; //latency in user time space
     uint32_t sunvox_latency = ( user_latency * sv_get_ticks_per_second() ) / user_ticks_per_second; //latency in SunVox time space
     uint32_t latency_frames = ( user_latency * sample_rate_Hz ) / user_ticks_per_second; //latency in frames
     sv_audio_callback( buf, frames, latency_frames, sv_get_ticks() + sunvox_latency );
*/
int sv_audio_callback( void* buf, int frames, int latency, uint32_t out_time ) SUNVOX_FN_ATTR;
/*
   sv_audio_callback2() - send some data to the Input module and receive the filtered data from the Output module.
   It's the same as sv_audio_callback() but you also can specify the input buffer.
   Parameters:
     ...
     in_type - input buffer type: 0 - int16_t (16bit integer); 1 - float (32bit floating point);
     in_channels - number of input channels;
     in_buf - input buffer; stereo data must be interleaved in this buffer: LRLR... ; where the LR is the one frame (Left+Right channels);
*/
int sv_audio_callback2( void* buf, int frames, int latency, uint32_t out_time, int in_type, int in_channels, void* in_buf ) SUNVOX_FN_ATTR;
/*
   sv_open_slot(), sv_close_slot(), sv_lock_slot(), sv_unlock_slot() - 
   open/close/lock/unlock sound slot for SunVox.
   You can use several slots simultaneously (each slot with its own SunVox engine).
   Use lock/unlock when you simultaneously read and modify SunVox data from different threads (for the same slot); 
   example:
     thread 1: sv_lock_slot(0); sv_get_module_flags(0,mod1); sv_unlock_slot(0);
     thread 2: sv_lock_slot(0); sv_remove_module(0,mod2); sv_unlock_slot(0);
   Some functions (marked as "USE LOCK/UNLOCK") can't work without lock/unlock at all.
*/
int sv_open_slot( int slot ) SUNVOX_FN_ATTR;
int sv_close_slot( int slot ) SUNVOX_FN_ATTR;
int sv_lock_slot( int slot ) SUNVOX_FN_ATTR;
int sv_unlock_slot( int slot ) SUNVOX_FN_ATTR;
/*
   sv_load(), sv_load_from_memory() - 
   load SunVox project from the file or from the memory block.
*/
int sv_load( int slot, const char* name ) SUNVOX_FN_ATTR;
int sv_load_from_memory( int slot, void* data, uint32_t data_size ) SUNVOX_FN_ATTR;
/*
   sv_play() - play from the current position;
   sv_play_from_beginning() - play from the beginning (line 0);
   sv_stop(): first call - stop playing; second call - reset all SunVox activity and switch the engine to standby mode.
*/
int sv_play( int slot ) SUNVOX_FN_ATTR;
int sv_play_from_beginning( int slot ) SUNVOX_FN_ATTR;
int sv_stop( int slot ) SUNVOX_FN_ATTR;
/*
   sv_set_autostop(), sv_get_autostop() -
   autostop values: 0 - disable autostop; 1 - enable autostop.
   When disabled, song is playing infinitely in the loop.
*/
int sv_set_autostop( int slot, int autostop ) SUNVOX_FN_ATTR;
int sv_get_autostop( int slot ) SUNVOX_FN_ATTR;
/*
   sv_end_of_song() return values: 0 - song is playing now; 1 - stopped. 
*/
int sv_end_of_song( int slot ) SUNVOX_FN_ATTR;
/*
*/
int sv_rewind( int slot, int line_num ) SUNVOX_FN_ATTR;
/*
   sv_volume() - set volume from 0 (min) to 256 (max 100%);
   negative values are ignored;
   return value: previous volume;
*/
int sv_volume( int slot, int vol ) SUNVOX_FN_ATTR;
/*
   sv_set_event_t() - set the time of events to be sent by sv_send_event()
   Parameters:
     slot;
     set: 1 - set; 0 - reset (use automatic time setting - the default mode);
     t: the time when the events occurred (in system ticks, SunVox time space).
   Examples:
     sv_set_event_t( slot, 1, 0 ) //not specified - further events will be processed as quickly as possible
     sv_set_event_t( slot, 1, sv_get_ticks() ) //time when the events will be processed = NOW + sound latancy * 2
*/
int sv_set_event_t( int slot, int set, int t ) SUNVOX_FN_ATTR;
/*
   sv_send_event() - send an event (note ON, note OFF, controller change, etc.)
   Parameters:
     slot;
     track_num - track number within the pattern;
     note: 0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_xxx defines;
     vel: velocity 1..129; 0 - default;
     module: 0 (empty) or module number + 1 (1..65535);
     ctl: 0xCCEE. CC - number of a controller (1..255). EE - effect;
     ctl_val: value of controller or effect.
*/
int sv_send_event( int slot, int track_num, int note, int vel, int module, int ctl, int ctl_val ) SUNVOX_FN_ATTR;
/*
*/
int sv_get_current_line( int slot ) SUNVOX_FN_ATTR; /* Get current line number */
int sv_get_current_line2( int slot ) SUNVOX_FN_ATTR; /* Get current line number in fixed point format 27.5 */
int sv_get_current_signal_level( int slot, int channel ) SUNVOX_FN_ATTR; /* From 0 to 255 */
const char* sv_get_song_name( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_bpm( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_tpl( int slot ) SUNVOX_FN_ATTR;
/*
   sv_get_song_length_frames(), sv_get_song_length_lines() -
   get the project length.
   Frame is one discrete of the sound. Sample rate 44100 Hz means, that you hear 44100 frames per second.
*/
uint32_t sv_get_song_length_frames( int slot ) SUNVOX_FN_ATTR;
uint32_t sv_get_song_length_lines( int slot ) SUNVOX_FN_ATTR;
/*
*/
int sv_get_number_of_modules( int slot ) SUNVOX_FN_ATTR;
/*
   sv_find_module() - find a module by name;
   return value: module number or -1 (if not found);
*/
int sv_find_module( int slot, const char* name ) SUNVOX_FN_ATTR;
/*
*/
uint32_t sv_get_module_flags( int slot, int mod_num ) SUNVOX_FN_ATTR; /* SV_MODULE_FLAG_xxx */
/*
   sv_get_module_inputs(), sv_get_module_outputs() - 
   get pointers to the int[] arrays with the input/output links.
   Number of inputs = ( module_flags & SV_MODULE_INPUTS_MASK ) >> SV_MODULE_INPUTS_OFF.
   Number of outputs = ( module_flags & SV_MODULE_OUTPUTS_MASK ) >> SV_MODULE_OUTPUTS_OFF.
*/
int* sv_get_module_inputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
int* sv_get_module_outputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
*/
const char* sv_get_module_name( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_xy() - get module XY coordinates packed in a single uint32 value:
   ( x & 0xFFFF ) | ( ( y & 0xFFFF ) << 16 )
   Normal working area: 0x0 ... 1024x1024
   Center: 512x512
   Use SV_GET_MODULE_XY() macro to unpack X and Y.
*/
uint32_t sv_get_module_xy( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_color() - get module color in the following format: 0xBBGGRR
*/
int sv_get_module_color( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_finetune() - get the relative note and finetune of the module;
   return value: ( finetune & 0xFFFF ) | ( ( relative_note & 0xFFFF ) << 16 ).
   Use SV_GET_MODULE_FINETUNE() macro to unpack finetune and relative_note.
*/
uint32_t sv_get_module_finetune( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_scope2() return value = received number of samples (may be less or equal to samples_to_read).
   Example:
     int16_t buf[ 1024 ];
     int received = sv_get_module_scope2( slot, mod_num, 0, buf, 1024 );
     //buf[ 0 ] = value of the first sample (-32768...32767);
     //buf[ 1 ] = value of the second sample;
     //...
     //buf[ received - 1 ] = value of the last received sample;
*/
uint32_t sv_get_module_scope2( int slot, int mod_num, int channel, int16_t* dest_buf, uint32_t samples_to_read ) SUNVOX_FN_ATTR;
/*
*/
int sv_get_number_of_patterns( int slot ) SUNVOX_FN_ATTR;
/*
   sv_find_pattern() - find a pattern by name;
   return value: pattern number or -1 (if not found);
*/
int sv_find_pattern( int slot, const char* name ) SUNVOX_FN_ATTR;
/*
   sv_get_pattern_xxxx - get pattern information
   x - time (line number);
   y - vertical position on timeline;
   tracks - number of pattern tracks;
   lines - number of pattern lines;
   name - pattern name or NULL;
*/
int sv_get_pattern_x( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_y( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_tracks( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_lines( int slot, int pat_num ) SUNVOX_FN_ATTR;
const char* sv_get_pattern_name( int slot, int pat_num ) SUNVOX_FN_ATTR;
/*
   sv_get_pattern_data() - get the pattern buffer (for reading and writing)
   containing notes (events) in the following order:
     line 0: note for track 0, note for track 1, ... note for track X;
     line 1: note for track 0, note for track 1, ... note for track X;
     ...
     line X: ...
   Example:
     int pat_tracks = sv_get_pattern_tracks( slot, pat_num ); //number of tracks
     sunvox_note* data = sv_get_pattern_data( slot, pat_num ); //get the buffer with all the pattern events (notes)
     sunvox_note* n = &data[ line_number * pat_tracks + track_number ];
     ... and then do someting with note n ...
*/
sunvox_note* sv_get_pattern_data( int slot, int pat_num ) SUNVOX_FN_ATTR;
/*
   sv_pattern_mute() - mute (1) / unmute (0) specified pattern;
   negative values are ignored;
   return value: previous state (1 - muted; 0 - unmuted) or -1 (error);
*/
int sv_pattern_mute( int slot, int pat_num, int mute ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
/*
   SunVox engine uses its own time space, measured in system ticks (don't confuse it with the project ticks);
   required when calculating the out_time parameter in the sv_audio_callback().
   Use sv_get_ticks() to get current tick counter (from 0 to 0xFFFFFFFF).
   Use sv_get_ticks_per_second() to get the number of SunVox ticks per second.
*/
uint32_t sv_get_ticks( void ) SUNVOX_FN_ATTR;
uint32_t sv_get_ticks_per_second( void ) SUNVOX_FN_ATTR;
/*
   sv_get_log() - get the latest messages from the log
   Parameters:
     size - max number of bytes to read.
   Return value: pointer to the null-terminated string with the latest log messages.
*/
const char* sv_get_log( int size ) SUNVOX_FN_ATTR;
int sv_load_dll( void )
{
#ifdef OS_WIN
    return sv_load_dll2( TEXT(LIBNAME) );
#else
    return sv_load_dll2( LIBNAME );
#endif
    return -1111;
}
int sv_unload_dll( void )
{
#ifdef OS_UNIX
    if( g_sv_dll ) dlclose( g_sv_dll );
#endif
    return 0;
}
int sv_load_dll( void );
int sv_unload_dll( void );