sunvox_lib/headers/sunvox.pas

unit sunvox;
//sunvox.h 1.7.3b translation by laggyluk.
//tested on windows and linux.
//2013 - 2019: updated by NightRadio

{$mode objfpc}{$H+}

{$define SUNVOX_STATIC_LIB}//comment out for dynamic loading

interface

uses
  {$IFDEF Windows}
  windows,
  {$endif}
  Classes, SysUtils, dynlibs;

const
{$IFDEF Windows}
    LIBNAME = 'sunvox.dll';
{$ENDIF}
{$IFDEF Darwin}
    LIBNAME = 'sunvox.dylib' ;
{$ENDIF}
{$IFDEF LINUX}
    LIBNAME = './sunvox.so';
{$ENDIF}

   NOTECMD_NOTE_OFF = 128;
   NOTECMD_ALL_NOTES_OFF = 129; //* notes of all synths off */
   NOTECMD_CLEAN_SYNTHS	= 130; //* stop and clean all synths */
   NOTECMD_STOP	=	131;
   NOTECMD_PLAY	=	132;

   SV_INIT_FLAG_NO_DEBUG_OUTPUT =	( 1 << 0 );
   SV_INIT_FLAG_USER_AUDIO_CALLBACK =	( 1 << 1 ); //* Interaction with sound card is on the user side */
   SV_INIT_FLAG_AUDIO_INT16 =		( 1 << 2 );
   SV_INIT_FLAG_AUDIO_FLOAT32 	=	( 1 << 3 );
   SV_INIT_FLAG_ONE_THREAD	=		( 1 << 4 ); //* Audio callback and song modification functions are in single thread */

   SV_MODULE_FLAG_EXISTS= ( 1 << 0 );
   SV_MODULE_FLAG_EFFECT= ( 1 << 1 );
   SV_MODULE_FLAG_MUTE= ( 1 << 2 );
   SV_MODULE_FLAG_SOLO= ( 1 << 3 );
   SV_MODULE_FLAG_BYPASS= ( 1 << 4 );
   SV_MODULE_INPUTS_OFF= 16;
   SV_MODULE_INPUTS_MASK= ( 255 << SV_MODULE_INPUTS_OFF ) ;
   SV_MODULE_OUTPUTS_OFF= ( 16 + 8 );
   SV_MODULE_OUTPUTS_MASK =( 255 << SV_MODULE_OUTPUTS_OFF );

   SV_STYPE_INT16 =0;
   SV_STYPE_INT32 =1;
   SV_STYPE_FLOAT32 =2;
   SV_STYPE_FLOAT64 =3;

type
//sv_send_event() parameters:
//  slot;
//  track_num: from 0 to 15;
//  note: 0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_xxx defines;
//  vel: velocity 1..129; 0 - default;
//  module: 0 - nothing; 1..255 - module number;
//  ctl: CCXX. CC - number of controller. XX - std effect;
//  ctl_val: value of controller.

  sunvox_note = record
    note:ShortInt;           //0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_xxx defines
    vel:ShortInt;            //Velocity 1..129; 0 - default
    module:ShortInt;         //0 - nothing; 1..255 - module number
    nothing:ShortInt;
    ctl:ShortInt;            //CCEE. CC - number of controller. EE - std effect
    ctl_val:ShortInt;        //XXYY. Value of controller
  end;
  pSunvox_note = ^sunvox_note;

{$ifdef SUNVOX_STATIC_LIB}
//sv_audio_callback() - get the next piece of SunVox audio.
//With sv_audio_callback() you can ignore the built-in SunVox sound output mechanism and use some other sound system.
//Set SV_INIT_FLAG_USER_AUDIO_CALLBACK flag in sv_init() if you want to use sv_audio_callback() function.
//Parameters:
//  buf - destination buffer of type signed short (if SV_INIT_FLAG_AUDIO_INT16 used in sv_init())
//        or float (if SV_INIT_FLAG_AUDIO_FLOAT32 used in sv_init());
//  	  stereo data will be interleaved in this buffer: LRLR... ; where the LR is the one frame (Left+Right channels);
//  frames - number of frames in destination buffer;
//  latency - audio latency (in frames);
//  out_time - output time (in ticks).
function sv_audio_callback( buf:pointer; frames, latency:integer; out_time:cardinal):integer;stdcall; external LIBNAME;
function sv_audio_callback2( buf:pointer; frames, latency:integer; out_time:cardinal; in_type, in_channels:integer; in_buf:pointer):integer;stdcall; external LIBNAME;
function sv_open_slot( slot:integer ):integer;  stdcall; external LIBNAME;
function sv_close_slot( slot:integer ):integer;  stdcall; external LIBNAME;
function sv_lock_slot( slot:integer ):integer;  stdcall; external LIBNAME;
function sv_unlock_slot( slot:integer ):integer;  stdcall; external LIBNAME;
function sv_init( const config:pchar; freq, channels, flags:integer ):integer; stdcall; external LIBNAME;
function sv_deinit:integer; stdcall; external LIBNAME;
function sv_get_sample_rate:integer; stdcall; external LIBNAME;
function sv_update_input:integer; stdcall; external LIBNAME;
function sv_load( slot:integer; const name:pchar ):integer; stdcall; external LIBNAME;
function sv_load_from_memory( slot:integer; data:pointer; data_size:cardinal ):integer; stdcall; external LIBNAME;
function sv_play( slot:integer ):integer; stdcall; external LIBNAME;
function sv_play_from_beginning( slot:integer):integer; stdcall; external LIBNAME;
function sv_stop( slot:integer ):integer; stdcall; external LIBNAME;
//autostop values: 0 - disable autostop; 1 - enable autostop.
//When disabled, song is playing infinitely in the loop.
function sv_set_autostop( slot, autostop :integer):integer; stdcall; external LIBNAME;
function sv_get_autostop( slot:integer ):integer; stdcall; external LIBNAME;
//sv_end_of_song() return values: 0 - song is playing now; 1 - stopped.
function sv_end_of_song(slot:integer):integer;  stdcall; external LIBNAME;
function sv_rewind(slot:integer; line_num:integer ):integer; stdcall; external LIBNAME;
function sv_volume( slot:integer; vol:integer ):integer; stdcall; external LIBNAME;
function sv_set_event_t(slot:integer; set, t :integer):integer; stdcall; external LIBNAME;
function sv_send_event(slot:integer; track_num, note, vel, module, ctl, ctl_val :integer):integer; stdcall; external LIBNAME;
function sv_get_current_line( slot:integer):integer; stdcall; external LIBNAME;
function sv_get_current_line2( slot:integer):integer; stdcall; external LIBNAME;
function sv_get_current_signal_level(slot:integer; channel:integer ):integer; stdcall; external LIBNAME; //From 0 to 255
function sv_get_song_name( slot:integer):pchar; stdcall; external LIBNAME;
function sv_get_song_bpm(slot:integer):integer; stdcall; external LIBNAME;
function sv_get_song_tpl(slot:integer):integer; stdcall; external LIBNAME;
//Frame is one discrete of the sound. Sample rate 44100 Hz means, that you hear 44100 frames per second.
function sv_get_song_length_frames( slot:integer ):cardinal; stdcall; external LIBNAME;
function sv_get_song_length_lines( slot:integer ):cardinal; stdcall; external LIBNAME;
function sv_get_number_of_modules( slot:integer ):integer; stdcall; external LIBNAME;
function sv_find_module( slot:integer; const name:pchar ):integer; stdcall; external LIBNAME;
function sv_get_module_flags( slot:integer; mod_num:integer ):integer; stdcall; external LIBNAME;
function sv_get_module_inputs( slot:integer; mod_num:integer):pinteger; stdcall; external LIBNAME;
function sv_get_module_outputs( slot:integer; mod_num:integer):pinteger; stdcall; external LIBNAME;
function sv_get_module_name( slot:integer; mod_num:integer):pchar; stdcall; external LIBNAME;
function sv_get_module_xy( slot:integer; mod_num:integer):cardinal; stdcall; external LIBNAME;
function sv_get_module_color( slot:integer; mod_num:integer):integer; stdcall; external LIBNAME;
function sv_get_module_finetune( slot:integer; mod_num:integer):cardinal; stdcall; external LIBNAME;
//sv_get_module_scope2() return value = received number of samples (may be less or equal to samples_to_read).
function sv_get_module_scope2(slot, mod_num, channel:integer; read_buf:pSmallInt; samples_to_read:cardinal ):cardinal; stdcall; external LIBNAME;
function sv_get_number_of_patterns( slot:integer ):integer; stdcall; external LIBNAME;
function sv_find_pattern( slot:integer; const name:pchar ):integer; stdcall; external LIBNAME;
function sv_get_pattern_x( slot,pat_num:integer):integer; stdcall; external LIBNAME;
function sv_get_pattern_y(slot,pat_num:integer):integer; stdcall; external LIBNAME;
function sv_get_pattern_tracks(slot,pat_num:integer):integer; stdcall; external LIBNAME;
function sv_get_pattern_lines(slot,pat_num:integer):integer; stdcall; external LIBNAME;
function sv_get_pattern_name( slot:integer; pat_num:integer):pchar; stdcall; external LIBNAME;
function sv_get_pattern_data(slot,pat_num:integer):pSunvox_note; stdcall; external LIBNAME;
function sv_pattern_mute( slot, pat_num, mute:integer ):integer; stdcall; external LIBNAME; //Use it with sv_lock_slot() and sv_unlock_slot()
//SunVox engine uses its own time space, measured in ticks.
//Use sv_get_ticks() to get current tick counter (from 0 to 0xFFFFFFFF).
//Use sv_get_ticks_per_second() to get the number of SunVox ticks per second.
function sv_get_ticks:cardinal; stdcall; external LIBNAME;
function sv_get_ticks_per_second:cardinal; stdcall; external LIBNAME;
function sv_get_log( size:integer ):pchar; stdcall; external LIBNAME;

function sv_load_dll:integer;
function sv_unload_dll:integer;

implementation
function sv_load_dll:integer;
begin
  //static lib so..
  result:=0;
end;

function sv_unload_dll:integer;
begin
  result:=0;
end;
begin
end.
